Fix: Panel - Icon align

--- a/userChrome.css
+++ b/userChrome.css
@@ -220,6 +220,7 @@
   #appMenu-multiView .subviewbutton::before {
     display: inline-block;
     margin-right: var(--arrowpanel-menuicon-padding);
+    margin-top: 2px;
   }
 
   #appMenu-proton-update-banner {
